--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,9 @@
 
 :root {
   font-family: 'Overpass', sans-serif;
-  ;
   --bg-color: #121417;
-  --primary-color: #4b5563;
-  --secondary-color: #252d37;
+  --primary-color: #555f6d50;
+  --secondary-color: #1a222b;
   --white: #ffffff;
   --orange: #fb7413;
   --secondary-font: #9ca3af;
@@ -31,14 +30,25 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #252d37;
+  flex-direction: column;
+  background: radial-gradient(98.96% 98.96% at 50% 0%, var(--primary-color) 0%, var(--secondary-color) 100%);
   width: 22rem;
   height: 20rem;
   border-radius: 20px;
 }
 
-.center-container {
+.first-container {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 85%;
+  height: 85%;
+}
+
+.second-container {
+  display: flex;
+  align-items: center;
+  text-align: center;
   flex-direction: column;
   justify-content: space-between;
   width: 80%;
@@ -71,6 +81,7 @@ body {
 
 
 .rating-container ul {
+  font-size: 10pt;
   color: var(--secondary-font);
   display: flex;
   justify-content: space-between;
@@ -95,6 +106,7 @@ body {
 
 .submit-container button {
   cursor: pointer;
+  font-family: 'Overpass', sans-serif;
   font-size: 9pt;
   font-weight: 600;
   width: 100%;
@@ -109,4 +121,14 @@ body {
 .submit-container button:hover {
   background-color: var(--white);
   color: var(--orange);
+}
+
+.selected-container {
+  font-size: 10pt;
+  font-weight: 300;
+  color: var(--orange);
+  background-color: var(--primary-color);
+  padding: 8px 15px;
+  border-radius: 20px;
+
 }
